feat(ui-ux): extend content and fix image path

--- a/src/i18n/ar/ui-ux-audit.json
+++ b/src/i18n/ar/ui-ux-audit.json
@@ -1,22 +1,58 @@
 {
-    "title": "تدقيق UI/UX",
-    "subtitle": "مراجعة تجربة المستخدم",
-    "description": "تحديد مشاكل سهولة الاستخدام وتحسين معدلات التحويل.",
+    "title": "مراجعة تجربة المستخدم (UI/UX) الاحترافية",
+    "subtitle": "اكتشف نقاط الاحتكاك الخفية التي تقتل مبيعاتك.",
+    "description": "توقف عن التخمين لماذا لا يشتري الزوار. تحدد مراجعتنا الخبيرة بدقة أين يتعثر المستخدمون، أو يشعرون بالإحباط، أو يغادرون، مما يمنحك خريطة طريق لمضاعفة معدل التحويل لديك.",
     "features": [
-        "مراجعة فيديو",
-        "تحليل التحويل",
-        "اختبار قابلية الاستخدام",
-        "فحص إمكانية الوصول",
-        "توصيات التصميم"
+        "تحليل شامل بالفيديو لتجربة المستخدم",
+        "تقييم إرشادي واختبار قابلية الاستخدام",
+        "تحليل الاحتكاك في مسار المبيعات (Funnel)",
+        "فحص معايير إمكانية الوصول (Accessibility)",
+        "تقرير PDF قابل للتنفيذ وخريطة طريق للإصلاح"
     ],
+    "benefits": {
+        "0": {
+            "title": "توقف عن التخمين",
+            "description": "الآراء لا تبيع؛ البيانات تفعل. نستبدل جدال الفريق بتحليل موضوعي للمكان والسبب الذي يغادر فيه المستخدمون موقعك."
+        },
+        "1": {
+            "title": "ضاعف العائد على الاستثمار",
+            "description": "تحويل الزوار الحاليين أرخص من شراء زوار جدد. إصلاح مشاكل الاستخدام هو النشاط الأكثر ربحية الذي يمكنك القيام به."
+        },
+        "2": {
+            "title": "نظرة جديدة ومحايدة",
+            "description": "أنت قريب جداً من منتجك لدرجة أنك لا ترى العيوب. نحن نقدم منظوراً خبيراً ومحايداً لتجربة المستخدم لأول مرة."
+        },
+        "3": {
+            "title": "خريطة طريق للتنفيذ",
+            "description": "لا نكتفي بسرد المشاكل؛ نعطيك حلولاً ذات أولوية. تحصل على قائمة مرجعية جاهزة للتنفيذ فوراً من قبل المطورين."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "الاكتشاف والفهم",
+            "description": "نتعرف على أهداف عملك، وجمهورك المستهدف، ومقاييس التحويل الرئيسية لفهم ما يعنيه 'النجاح' لك."
+        },
+        "1": {
+            "title": "التقييم الإرشادي",
+            "description": "يقوم خبراؤنا بتقييم موقعك مقابل 10 مبادئ عالمية لقابلية الاستخدام (مبادئ جاكوب نيلسن)."
+        },
+        "2": {
+            "title": "تحليل الرحلة (Walkthrough)",
+            "description": "نحاكي رحلات المستخدم الحقيقية (الشراء، التسجيل) ونسجل فيديو يوضح كل نقطة احتكاك نواجهها."
+        },
+        "3": {
+            "title": "تسليم الاستراتيجية",
+            "description": "تتلقى الفيديو وتقرير PDF مرتب حسب الأولوية. نراجع النتائج معك لضمان الوضوح التام."
+        }
+    },
     "faq": {
-        "q1": "ماذا أحصل في التدقيق؟",
-        "a1": "تحصل على مراجعة فيديو شاملة لموقعك وتقرير PDF يفصل المشكلات ويقترح إصلاحات قابلة للتنفيذ.",
-        "q2": "هل يمكنكم إصلاح المشكلات التي تجدونها؟",
-        "a2": "نعم! بعد التدقيق، يمكننا تقديم عرض أسعار لتنفيذ التغييرات المقترحة في التصميم والهيكل.",
-        "q3": "كم من الوقت يستغرق؟",
-        "a3": "تكتمل معظم عمليات التدقيق في غضون 3-5 أيام عمل.",
-        "q4": "هل هذا للمواقع الجديدة فقط؟",
-        "a4": "لا، إنها قيمة لأي موقع حالي لا يحول الزوار إلى عملاء بالمعدل المطلوب."
+        "q1": "ما الذي سأحصل عليه بالضبط؟",
+        "a1": "ستحصل على تشخيص كامل لموقعك: فيديو مدته 20+ دقيقة نراجع فيه موقعك كمستخدم في الوقت الفعلي، بالإضافة إلى تقرير PDF مفصل يرتب المشاكل حسب الأهمية مع توصيات محددة وقابلة للتنفيذ حول كيفية إصلاحها.",
+        "q2": "هل يمكنكم تنفيذ التغييرات لي؟",
+        "a2": "بالتأكيد. بينما المراجعة هي خدمة تشخيصية مستقلة، يقوم العديد من العملاء بتوظيفنا بعد ذلك لتنفيذ الإصلاحات الموصى بها. يمكننا تقديم عرض سعر منفصل للتنفيذ الدقيق لخريطة الطريق.",
+        "q3": "كم تستغرق المراجعة؟",
+        "a3": "المراجعة اليدوية الدقيقة تستغرق وقتاً. عادة ما نقوم بتسليم الفيديو والتقرير الشامل خلال 3-5 أيام عمل من الحجز.",
+        "q4": "هل هذا مفيد للمواقع القديمة؟",
+        "a4": "إنه مفيد جداً للمواقع القائمة! إذا كان لديك زيارات ولكن مبيعات قليلة، فإن المراجعة غالباً ما توفر أعلى عائد على الاستثمار (ROI)؛ لأنها تقوم بإصلاح الثقوب في الدلو قبل أن تصب فيه المزيد من الماء (الإعلانات)."
     }
 }
