--- a/src/i18n/fa/ui-ux-audit.json
+++ b/src/i18n/fa/ui-ux-audit.json
@@ -1,22 +1,58 @@
 {
-    "title": "ممیزی UI/UX",
-    "subtitle": "بررسی تخصصی تجربه کاربری",
-    "description": "شناسایی مشکلات کاربردپذیری و بهبود نرخ تبدیل سایت شما.",
+    "title": "ممیزی تخصصی UI/UX",
+    "subtitle": "کشف نقاط اصطکاک پنهانی که فروش شما را می‌کشند.",
+    "description": "دیگر حدس نزنید چرا بازدیدکنندگان خرید نمی‌کنند. ممیزی تخصصی ما دقیقاً نشان می‌دهد کاربران کجا گیر می‌کنند، کلافه می‌شوند یا سایت را ترک می‌کنند، و نقشه‌ای برای دو برابر کردن نرخ تبدیل به شما می‌دهد.",
     "features": [
-        "بررسی ویدئویی",
-        "تحلیل نرخ تبدیل",
-        "تست کاربردپذیری",
-        "بررسی دسترس‌پذیری",
-        "پیشنهادات طراحی"
+        "تحلیل ویدیویی جامع از تجربه کاربر",
+        "ارزیابی مکاشفه‌ای و تست کاربردپذیری",
+        "تحلیل اصطکاک در قیف فروش",
+        "بررسی استانداردهای دسترسی‌‌پذیری (Accessibility)",
+        "سند PDF راهکارهای عملی و نقشه راه اصلاح"
     ],
+    "benefits": {
+        "0": {
+            "title": "پایان حدس و گمان",
+            "description": "نظر شخصی فروش نمی‌آورد؛ داده می‌آورد. ما بحث‌های تیمی را با تحلیل عینی اینکه کاربران کجا و چرا سایت را ترک می‌کنند، جایگزین می‌کنیم."
+        },
+        "1": {
+            "title": "دو برابر کردن بازده سرمایه (ROI)",
+            "description": "تبدیل بازدیدکننده موجود ارزان‌تر از خرید ترافیک جدید است. رفع مشکلات کاربری، پرسودترین کاری است که می‌توانید انجام دهید."
+        },
+        "2": {
+            "title": "نگاهی تازه و بی‌طرف",
+            "description": "شما آنقدر به محصول خود نزدیکید که ایرادات را نمی‌بینید. ما دیدگاهی بی‌طرفانه و خبره از تجربه اولین بازدید کاربر ارائه می‌دهیم."
+        },
+        "3": {
+            "title": "نقشه راه عملیاتی",
+            "description": "ما فقط مشکل را نمی‌گوییم؛ راهکار اولویت‌بندی شده می‌دهیم. شما چک‌لیستی دریافت می‌کنید که آماده اجرا توسط برنامه‌نویسان است."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "کشف و شناخت",
+            "description": "ما اهداف تجاری، مخاطبان هدف و معیارهای کلیدی تبدیل شما را بررسی می‌کنیم تا معنی 'موفقیت' را درک کنیم."
+        },
+        "1": {
+            "title": "ارزیابی هیوریستیک",
+            "description": "کارشناسان ما سایت شما را بر اساس ۱۰ اصل جهانی کاربردپذیری (اصول جیکوب نیلسن) ارزیابی می‌کنند."
+        },
+        "2": {
+            "title": "تحلیل گام‌به‌گام (Walkthrough)",
+            "description": "ما سفر واقعی کاربر (خرید، ثبت‌نام) را شبیه‌سازی کرده و ویدیویی ضبط می‌کنیم که جزئیات هر اصطکاک را نشان می‌دهد."
+        },
+        "3": {
+            "title": "تحویل استراتژی",
+            "description": "شما ویدیو و گزارش PDF اولویت‌بندی شده را دریافت می‌کنید. ما یافته‌ها را با شما مرور می‌کنیم تا همه چیز شفاف باشد."
+        }
+    },
     "faq": {
-        "q1": "در ممیزی چه چیزی دریافت می‌کنم؟",
-        "a1": "شما یک بررسی ویدئویی جامع از سایت خود و یک گزارش PDF با جزئیات مشکلات و راهکارهای عملی دریافت می‌کنید.",
-        "q2": "آیا می‌توانید مشکلات پیدا شده را رفع کنید؟",
-        "a2": "بله! پس از ممیزی، می‌توانیم برای پیاده‌سازی تغییرات پیشنهادی طراحی و ساختار، قیمت ارائه دهیم.",
-        "q3": "چقدر طول می‌کشد؟",
-        "a3": "اکثر ممیزی‌ها طی ۳ تا ۵ روز کاری تکمیل می‌شوند.",
-        "q4": "آیا این فقط برای سایت‌های جدید است؟",
-        "a4": "خیر، برای هر سایت موجودی که بازدیدکنندگان را به مشتری تبدیل نمی‌کند ارزشمند است."
+        "q1": "دقیقاً چه چیزی دریافت می‌کنم؟",
+        "a1": "شما یک عیب‌یابی کامل دریافت می‌کنید: یک ویدیوی ۲۰+ دقیقه‌ای که در آن سایت شما را به عنوان کاربر بررسی می‌کنیم، به‌علاوه یک گزارش PDF جامع که مشکلات را بر اساس اهمیت اولویت‌بندی کرده و راهکارهای اجرایی ارائه می‌دهد.",
+        "q2": "آیا خودتان مشکلات را حل می‌کنید؟",
+        "a2": "حتماً. اگرچه ممیزی یک سرویس تشخیصی مستقل است، اما بسیاری از مشتریان پس از دیدن گزارش، اجرای اصلاحات را هم به ما می‌سپارند. ما می‌توانیم پروپوزال جداگانه‌ای برای اجرای دقیق نقشه راه ارائه دهیم.",
+        "q3": "انجام ممیزی چقدر زمان می‌برد؟",
+        "a3": "یک بررسی دستی و دقیق زمان‌بر است. ما معمولاً گزارش و ویدیوی تحلیل را ظرف ۳ تا ۵ روز کاری پس از سفارش تحویل می‌دهیم.",
+        "q4": "آیا برای سایت‌های قدیمی مفید است؟",
+        "a4": "اتفاقاً بیشترین فایده را برای سایت‌های فعال دارد! اگر ترافیک دارید اما فروش نه، ممیزی بالاترین نرخ بازگشت سرمایه (ROI) را دارد؛ چون قبل از اینکه پول بیشتری برای تبلیغات خرج کنید، سطل سوراخ (سایت) را تعمیر می‌کند."
     }
 }
